--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.7",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
