--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,28 +3,30 @@ node_modules/
 
 # Build output
 dist/
-build/
+
+# Environment variables
+.env
 
 # Logs
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-# Environment variables
-.env
-.env.local
-.env.*.local
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# IDE and editor files
-.idea/
+# IDE
 .vscode/
+.idea/
 *.swp
 *.swo
+
+# OS
 .DS_Store
-*.sublime-project
-*.sublime-workspace
+Thumbs.db
 
 # Coverage directory used by tools like istanbul
 coverage/
