--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -30,3 +30,10 @@ dist-ssr
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Testing
+coverage
+*.lcov
+
+# TypeScript
+*.tsbuildinfo
