--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "postinstall": "npm run build"
+    "build": "npm install && tsc",
+    "postinstall": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -23,18 +23,18 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.4"
-  },
-  "devDependencies": {
+    "socket.io": "^4.7.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.16",
-    "nodemon": "^3.0.3",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=14.0.0"
