--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,15 +11,17 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "typeRoots": ["./node_modules/@types"],
-    "baseUrl": ".",
+    "allowJs": true,
+    "declaration": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "baseUrl": "./src",
     "paths": {
-      "*": ["node_modules/*", "src/types/*"]
+      "*": ["*", "types/*"]
     }
   },
   "ts-node": {
     "files": true
   },
-  "include": ["src/**/*", "src/types/**/*.d.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 } 
