--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,14 +14,15 @@
     "allowJs": true,
     "declaration": true,
     "typeRoots": ["./node_modules/@types", "./src/types"],
-    "baseUrl": "./src",
+    "types": ["node", "express", "multer"],
+    "baseUrl": ".",
     "paths": {
-      "*": ["*", "types/*"]
+      "*": ["node_modules/*", "src/types/*"]
     }
   },
   "ts-node": {
     "files": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/types/**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 } 
