--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,7 +16,8 @@
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*", "src/types/*"]
+      "*": ["node_modules/*", "src/types/*"],
+      "express": ["node_modules/@types/express"]
     }
   },
   "ts-node": {
